<resources>
    <string name="app_name">Crony</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username or Email</string>
    <string name="register">REGISTER</string>
    <string name="loginwith">Login with</string>
    <string name="already_login">Already have an account?
        <b>Log in.</b>
    </string>
    <string name="register_now">NEXT</string>
    <string name="hint_fullname_register">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="log_in_with_facebook">
        <b>Log in with Facebook</b>
    </string>
    <string name="create_username">
        <b>CREATE USERNAME</b>
    </string>
    <string name="create_username_button">NEXT</string>
    <string name="profile_browse">CHOOSE</string>
    <string name="profile_upload">UPLOAD</string>
    <string name="profile_pic">Upload Profile Pic</string>
    <string name="skip_profile">SKIP</string>
    <string name="error_connection">Unable to connect</string>
    <string name="text_home">Home</string>
    <string name="text_search">Search</string>
    <string name="text_heart">Bliss</string>
    <string name="text_person">Me</string>
    <string name="place_name">Place Name</string>
    <string name="place_address">Place Address</string>
    <string name="attribution">Attribution</string>
    <string name="search_restaurant">Search In Restaurant</string>
    <string name="about">About</string>
    <string name="wanna_try">I wanna try this !</string>
    <string name="mini_review">Add a mini review...</string>
    <string name="reviews">Reviews</string>
    <string name="menu">Menu</string>
    <string name="watch_video">Watch Video</string>
    <string name="search_by_tags">Search by tags</string>
    <string name="search_by_places">Search by places</string>
    <string name="top_items_nearby">Top tags nearby</string>
    <string name="top_places_nearby">Top places nearby</string>
    <string name="get_place_text">Get Place</string>
    <string name="all_items">All Items</string>
    <string name="one">1 km</string>
    <string name="five">5 km</string>
    <string name="two_five">25 km</string>
    <string name="one_zero_zero">100 km</string>
    <string name="global">Global</string>
    <string name="email_hint">
        <font size="17">Email or Blisspot Username</font>
    </string>
    <string name="love">Made with love in India</string>
    <string name="gps_message_22">Allow <b>Blisspot</b> to access this device\'s location?
    </string>
    <string name="empty_tag">Can\'t search empty tag</string>
    <string name="people_who_liked">People who liked this</string>
    <string name="suggested_people">Suggested People</string>
    <string name="unfollow">Unfollow</string>
    <string name="cancel">Cancel</string>
    <string name="no_suggestions">Sorry, no suggestions for you !</string>
    <string name="about_profile">Who Am I ?</string>
    <string name="read_more">Read more</string>
    <string name="following_number">Following</string>
    <string name="foodspot_timeline">Blisspot timeline</string>
    <string name="no_posts_from_followers">Oops ! There are no posts from people you follow.
    </string>
    <string name="no_following">You are not following anyone.</string>
    <string name="no_followers">You have no followers.</string>
    <string name="followers_number">Followers</string>
    <string name="todo_list">To-do List</string>
    <string name="change_photo">Change Pic</string>
    <string name="username">Username</string>
    <string name="username_taken">Username already taken</string>
    <string name="email_taken">Email already taken</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="todo">To-do</string>
    <string name="added">Added</string>
    <string name="no_todo">No To-do items saved.</string>
    <string name="delete">Remove</string>
    <string name="notifications">Notifications</string>
    <string name="todo_notify">To-do Notifications</string>
    <string name="info">Info</string>
    <string name="bliss">Bliss</string>
    <string name="address">Address</string>
    <string name="timings">Timings</string>
    <string name="from_owner">From the Owner</string>
    <string name="no_notifications">You have no notifications.</string>
    <string name="discover">Discover</string>
    <string name="activity">Activity</string>
    <string name="nothing_here">No posts here.</string>
    <string name="book_table">BOOK A TABLE</string>
    <string name="add">+ ADD</string>
    <string name="add_another">+ ADD ANOTHER</string>
    <string name="plate">Plate</string>
    <string name="tables">Tables</string>
    <string name="no_orders">You have no orders in your plate.</string>
    <string name="Rs">\u20B9</string>
    <string name="ins_special">Special Instructions/Comments</string>
    <string name="ins_special_eg">E.g. I\'d like a table near window.</string>
    <string name="table_for">Table for? E.g. 2</string>
    <string name="book_table_small">Book a Table</string>
    <string name="book_table_ins">By tapping \"BOOK\", your table will be reserved in</string>
    <string name="eg_time">At Time(E.g. 11:00 AM)</string>
    <string name="book">BOOK</string>
    <string name="status">Status:</string>
    <string name="gwalior">Gwalior</string>
    <string name="get_started">Get started</string>
    <string name="hint_enroll">Enrollment No.</string>
    <string name="hint_mobile">Mobile No.</string>
    <string name="otp_info">We will send an OTP to verify your mobile number</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_info">Already have an account ?</string>
    <string name="login">Login.</string>
    <string name="password_hint">
        <font size="17">Password</font>
    </string>
    <string name="log_in">Log In</string>
    <string name="login_hint">Enrollment No.</string>
    <string name="otp_verification">OTP VERIFICATION</string>
    <string name="enter_verification">ENTER VERIFICATION CODE</string>
    <string name="enter_6_digit_code">Enter the 6-digit code we sent to</string>
    <string name="request_new_one">Request a new one.</string>
    <string name="next">NEXT</string>
    <string name="enroll_ex">Eg. 0901CS151001</string>
    <string name="year_of_adm">Year of Admission(Eg. 2018)</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_branch">Select your Branch</string>
    <string name="profile">Profile</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="edit">Edit</string>
    <string name="notes">Notes</string>
    <string name="resume">Resume</string>
    <string name="resume_string">Build and download free resume with guidelines</string>
    <string name="my_posts">My posts</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="changes_saved">Changes saved successfully</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enrollment">Enrollment No.</string>
    <string name="email">Email</string>
    <string name="profile_changed">Profile picture updated successfully</string>
    <string name="rights">© 2018 Crony Inc.</string>
    <string name="following_button_text">Following</string>
    <string name="follow_button_text">Follow</string>
    <string name="search_username">Search by Name, Branch or Year</string>
    <string name="create_post">Create Post</string>
    <string name="create_ad">Sell an item</string>
    <string name="post">Post</string>
    <string name="post_information">Create Post</string>
    <string name="post_info">Share status or information.</string>
    <string name="submit">Submit</string>
    <string name="type_here">Type here&#8230;</string>
    <string name="now">Now</string>
    <string name="post_advertise">Create your Ad</string>
    <string name="post_ad">Sell your product in Crony Market.</string>
    <string name="add_photos">Add Photos</string>
    <string name="post_ad_permission">Without allowing permission to access photos, you won\'t be
        able to use this feature.
        You can change it anytime from \"Settings\" in your phone.
    </string>
    <string name="sells_faster">*Ads with 2 or more picture sells faster</string>
    <string name="category">Category</string>
    <string name="title">Title</string>
    <string name="title_hint">keep it short and simple</string>
    <string name="description">Description</string>
    <string name="description_hint">keep it specific and to the point</string>
    <string name="expected_price">Expected Price</string>
    <string name="price">price</string>
    <string name="charges">All the advertisements are free of cost.\nWe charge 10% of the price or
        ₹150,\nwhichever is less. Only when your item is sold.
    </string>
    <string name="terms_and">I agree to Terms and Conditions</string>
    <string name="post_ad_button">Post Ad</string>
    <string name="FCM_PREF">com.abhigam.www.foodspot.fcm_pref</string>
    <string name="FCM_TOKEN">com.abhigam.www.foodspot.fcm_token</string>
    <string name="load_more">Load More</string>
    <string name="buy_now">BUY NOW</string>
    <string name="save">SAVE</string>
    <string name="small_save">Save</string>
    <string name="taxes_product_price">This price is inclusive of all taxes</string>
    <string name="product_details">PRODUCT DETAILS</string>
    <string name="similar_products">SIMILAR PRODUCTS</string>
    <string name="wishlist">Wishlist</string>
    <string name="private_collection">Private Collection</string>
    <string name="no_items_wishlist">No items</string>
    <string name="notebook">Notebook</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="share">Share</string>
    <string name="likes">Likes</string>
    <string name="no_likes">No likes</string>
    <string name="add_comment">Add a public comment&#8230;</string>
    <string name="hint_comment">Add a public comment&#8230;</string>
    <string name="comment_added">Comment Added</string>
    <string name="comment_deleted">Comment Deleted</string>
    <string name="just_now">Just now</string>
    <string name="button_all">All posts</string>
    <string name="button_following">Following</string>
    <string name="comment_edited">Comment Edited</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort by</string>
    <string-array name="category_market">
        <item>Book</item>
        <item>Study Material</item>
        <item>Crony Merchant</item>
        <item>Stationary</item>
        <item>Furniture</item>
        <item>Electronics</item>
        <item>Miscellaneous</item>
    </string-array>
    <string-array name="sort_market">
        <item>₹ Min to Max</item>
        <item>₹ Max to Min</item>
        <item>Latest</item>
    </string-array>
    <string name="image_saved">Image saved</string>
    <string name="image_not_loaded">Image not loaded</string>
    <string name="switch_private">Private account</string>
    <string name="request">Requested</string>
    <string name="ok">OK</string>
    <string name="request_cancelled">Request cancelled</string>
    <string name="follow_to_see">Follow user to see posts</string>
    <string name="my_activity">My Activities</string>
    <string name="my_act_info">Transactions, Saved posts, Orders, Ads and other details</string>
    <string name="view_reply">VIEW REPLIES</string>
    <string name="transfer_coins">Transfer Money</string>
    <string name="send_receive_coins">Pay, transfer or add money within seconds.
    </string>
    <string name="forgot">Forgot Password</string>
    <string name="continue_forgot">CONTINUE</string>
    <string name="enter_mobile_no">Enter associated account mobile no.</string>
</resources>