<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="com.abhigam.www.foodspot.ForgotPassword">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_top"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:elevation="4dp"
        tools:targetApi="21"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
    >
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/forgot"
                  android:textColor="#dc000000"
                  android:textSize="22sp"/>
    </android.support.v7.widget.Toolbar>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="18sp"
              android:textColor="@color/black"
              android:layout_marginStart="20dp"
              android:layout_marginTop="16dp"
              android:layout_marginBottom="8dp"
              android:text="@string/enter_mobile_no"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/transparent_white"
            android:id="@+id/mobile_layout"
        >
            <android.support.v7.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_mobile"
                android:layout_marginTop="12dp"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/color_cursor"
                android:layout_marginBottom="2dp"
                android:textSize="24sp"
                android:maxLength="10"
                android:textColor="@color/black"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:inputType="phone"
                android:id="@+id/mobileNumber"
            />
        </android.support.design.widget.TextInputLayout>
        <ProgressBar
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/progress_mobile"
            style="?android:attr/progressBarStyleSmall"
            android:layout_alignTop="@id/mobile_layout"
            android:layout_alignBottom="@id/mobile_layout"
            android:layout_alignEnd="@id/mobile_layout"/>
    </RelativeLayout>

          <TextView android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/otp_info"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="16dp"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_forgot"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:id="@+id/continue_forgot"
        android:background="@drawable/edittext"
        android:layout_gravity="center"
        android:textColor="@color/white"
        app:spinning_bar_width="4dp"
        app:spinning_bar_color="@color/white"
        app:spinning_bar_padding="6dp"
    />

</LinearLayout>
